<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/error"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:layout_marginTop="?attr/actionBarSize"
    android:visibility="gone">

    <LinearLayout
        android:id="@+id/messages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_warning_grey600"
            android:layout_gravity="center|center_horizontal|center_vertical"/>
        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/label_font"
            android:textStyle="bold"
            android:gravity="center|center_horizontal|center_vertical"
            android:padding="@dimen/label_padding"
            android:text="@string/error_message"/>
        <TextView
            android:id="@+id/error_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:textSize="@dimen/label_font"
            android:padding="@dimen/label_padding"
            android:text="@string/error_service"/>
        <TextView
            android:id="@+id/error_try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:textSize="@dimen/label_font"
            android:padding="@dimen/label_padding"
            android:text="@string/error_try_again" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/cardviewBackground"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/reload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:backgroundTint="@color/errorButton"
            android:textColor="@color/errorButtonText"
            android:textAllCaps="true"
            android:text="@string/reload"
            android:layout_margin="4dp"  />
    </LinearLayout>

</RelativeLayout>